<resources>
    <string name="app_name">Karas Application</string>
    <string name="button_popular_movie">POPULAR MOIVES</string>
    <string name="button_stock_hawk">STOCK HAWK</string>
    <string name="button_build_it_bigger">BUILD IT BIGGER</string>
    <string name="button_make_your_app_material">MAKE YOUR APP MATERIAL</string>
    <string name="button_go_ubiquitous">GO UBIQUITOUS</string>
    <string name="button_capstone">CAPSTONE</string>
</resources>
