<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:gravity="center_horizontal"
    android:minHeight="?android:attr/listPreferredItemHeight"
    android:orientation="vertical"
    tools:context="app.com.example.karas.karasapplication.MainActivity">

    <TextView
        android:text="My Nanodegree App!"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:textSize="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/button_popular_movie"
        android:background="@color/button_background"
        android:textColor="@color/button_text"
        android:id="@+id/btn_popular_movies" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/button_stock_hawk"
        android:background="@color/button_background"
        android:textColor="@color/button_text"
        android:id="@+id/btn_stock_hawk" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/button_build_it_bigger"
        android:background="@color/button_background"
        android:textColor="@color/button_text"
        android:id="@+id/btn_build_it_bigger" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/button_make_your_app_material"
        android:background="@color/button_background"
        android:textColor="@color/button_text"
        android:id="@+id/btn_make_your_app_material" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/button_go_ubiquitous"
        android:background="@color/button_background"
        android:textColor="@color/button_text"
        android:id="@+id/btn_go_ubiquitous" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/button_capstone"
        android:background="@color/button_background"
        android:textColor="@color/button_text"
        android:id="@+id/btn_capstone" />
</LinearLayout>
